UI-1413 Update z-index to fix for popup appear above UIToolbarContainer

--- a/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/view/UIToolbarContainer/Stylesheet.css
+++ b/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/view/UIToolbarContainer/Stylesheet.css
@@ -21,7 +21,7 @@
 	padding: 0px;
 	height: auto;
 	position:relative;
-	z-index:99;
+	z-index:4;
 }
 .UIToolbarContainer ul {
 	padding:0;
